--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <!--  Font awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
-    <title>React App</title>
+    <title>Netflix</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
